--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "open-browser": "start http://localhost:3000"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
-    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
