--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
@@ -23,6 +24,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
